--- a/docs/upgrade-guides/core-2/nextjs.mdx
+++ b/docs/upgrade-guides/core-2/nextjs.mdx
@@ -107,32 +107,23 @@ User and customer feedback about `authMiddleware()` has been clear in that Middl
 
 Additionally, there are now new helpers that enable controlling auth on a _per-page and/or per-layout basis_ when using App Router. While you can still configure which routes are protected via Middleware, the page-based protection strategy is what is now recommended, as the co-location of auth protection configuration with the code for the pages themselves results in a superior developer experience that adds clarity as you navigate your codebase.
 
-#### Per-route auth config
+#### Per-page auth config
+
+<Callout type='danger'>
+    It is recommended not to rely on Layouts for auth protection. NextJS layouts do not rerender on client-side navigations and are not executed under certain conditions, so it is not guaranteed that your auth logic will be executed always. If you want to protect entire routes, use per-page auth or  Middleware-based protection instead.
+    For more information, [refer to the NextJS Layout docs](https://nextjs.org/docs/app/building-your-application/routing/pages-and-layouts#layouts).
+</Callout>
 
 Sometimes, code speaks louder than words. Let's get right into an example:
 
-<Tabs type="auth-protect-layout-page" items={["Layout", "Page"]}>
-  <Tab>
-    ```ts filename="app/src/dashboard/layout.tsx"
-    import { auth } from '@clerk/nextjs/server'
-
-    export default async function DashboardLayout({ children }) {
-        auth().protect();
-        // 👆 This one line is all it takes - the layout and all its children
-        // will now redirect to your sign in page for un-authenticated users.
-
-        return <>{children}</>
-    }
-    ```
-
-  </Tab>
+<Tabs type="auth-protect-page" items={["Page"]}>
   <Tab>
     ```ts filename="app/src/dashboard/page.tsx"
     import { auth } from '@clerk/nextjs/server'
 
     export default async function DashboardPage() {
         auth().protect();
-        // 👆 This one line is all it takes - the layout and all its children
+        // 👆 This one line is all it takes - this page is protected and
         // will now redirect to your sign in page for un-authenticated users.
 
         return <p>This page is now protected!</p>
@@ -142,7 +133,7 @@ Sometimes, code speaks louder than words. Let's get right into an example:
   </Tab>
 </Tabs>
 
-In this example, you add [`auth().protect()`](/docs/references/nextjs/auth#protect) to a layout and that layout and all of it's children will be gated by auth. The same logic can be applied for pages.
+In this example, you add [`auth().protect()`](/docs/references/nextjs/auth#protect) to a page and that page is gated by auth. If you want to protect entire routes, use Middleware-based auth as described in the next section.
 
 For more details on route protection, check out the [route protection guide](/references/nextjs/route-protection).
 
