Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -11,7 +11,7 @@ Clerk makes it easy to add social connection capabilities to your application. S
   width={1879}
   height={1373}
   src="/docs/images/setup-clerk/create-sign-in-comp.png"
-  alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social sign in options."
+  alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social sign-in options."
 />
 
 Social connections provide better security than passwords and other long-lived knowledge-based secrets. With social connections, users gain frictionless access to your application by using their existing credentials from an OAuth provider (Google, Facebook, Twitter, etc.) without having to go through complicated registration flows.
