--- a/docs/deployments/overview.mdx
+++ b/docs/deployments/overview.mdx
@@ -10,7 +10,7 @@ Learn how to deploy your Clerk app to production.
 ## Before you begin
 1. You will need to have a domain you own.
 2. You will need to be able to add DNS records on your domain.
-3. You will need Social Sign in (OAuth) credentials for any providers that you would like to use in production.
+3. You will need social sign-in (OAuth) credentials for any providers that you would like to use in production.
 
 ## Create your production instance
 
