--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -249,7 +249,7 @@ To limit access to the entire application, your middleware can be configured as 
   export default authMiddleware({
     afterAuth(auth, req, evt) {
       ...
-      // Redirect signed in users to organization selection page if they are not active in an organization
+      // Redirect signed-in users to organization selection page if they are not active in an organization
       if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
         const searchParams = new URLSearchParams({
           redirectUrl: req.url
@@ -272,7 +272,7 @@ To limit access to a specific part of the application, you can check if the path
   export default authMiddleware({
     afterAuth(auth, req, evt) {
       ...
-      // Redirect signed in users to organization selection page if they are not active in an organization
+      // Redirect signed-in users to organization selection page if they are not active in an organization
       if(
         auth.userId &&
         !auth.orgId &&
