--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -380,9 +380,9 @@ const styles = StyleSheet.create({
 });
 ```
 
-### OAuth sign in
+### OAuth sign-in
 
-If you want to add OAuth sign in flows to your Expo application, Clerk's OAuth hook allows you to handle both sign in and sign up in a single flow.
+If you want to add OAuth sign-in flows to your Expo application, Clerk's OAuth hook allows you to handle both sign in and sign up in a single flow.
 
 ```tsx filename="hooks/useWarmUpBrowser.tsx"
 import React from "react";
