--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -11,10 +11,10 @@ Clerk provides various options for setting up a sign-up flow. These options are 
 width={1879}
 height={1373}
 src="/docs/images/setup-clerk/create-sign-in-comp.png"
-alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social sign in options."
+alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social sign-in options."
 />
 
-In addition to the application name set for your instance, there will be standard authentication options to choose from: [identifiers](#choose-identifiers), [authentication strategy](#choose-authentication-strategy), [social sign in providers](#choose-social-sign-in-providers), and [Web3 authentication](#choose-web3-authentication).
+In addition to the application name set for your instance, there will be standard authentication options to choose from: [identifiers](#choose-identifiers), [authentication strategy](#choose-authentication-strategy), [social sign-in providers](#choose-social-sign-in-providers), and [Web3 authentication](#choose-web3-authentication).
 
 You can always make changes to your sign-up options after your application has been created by visiting the Clerk Dashboard and navigating to the **User & Authentication** settings.
 
@@ -40,11 +40,11 @@ Choosing a **password** strategy requires users to set a password during the sig
 
 Choosing a **passwordless** strategy involves a user signing up with an email address or phone number and then receiving a one-time verification code to complete the authentication process. While a one-time code is the default passwordless option, an email verification link (also known as a [magic link](/docs/custom-flows/magic-links)) is another passwordless authentication option that can later be enabled in settings.
 
-## Choose social sign in providers
+## Choose social sign-in providers
 
-Clerk offers a number of [Social Sign in providers](/docs/authentication/social-connections/oauth) that can be used during sign up and sign in. What makes the OAuth with Social Sign in providers appealing is that users often won't need to enter additional contact information since the provider already has it. The Social Sign in process is smart enough to automatically convert the sign up process of an existing user into a sign in flow, and the reverse is also true.
+Clerk offers a number of [social sign-in providers](/docs/authentication/social-connections/oauth) that can be used during sign-up and sign-in. What makes the OAuth with social sign-in providers appealing is that users often won't need to enter additional contact information since the provider already has it. The social sign-in process is smart enough to automatically convert the sign-up process of an existing user into a sign-in flow, and the reverse is also true.
 
-For each provider, Clerk offers a shared profile that can be used for development instances. This makes it easy to get up and running and test your Social Sign ins right away. However, production instances must use a custom profile with your own credentials.
+For each provider, Clerk offers a shared profile that can be used for development instances. This makes it easy to get up and running and test your social sign-ins right away. However, production instances must use a custom profile with your own credentials.
 
 ## Choose Web3 authentication
 
