--- a/docs/security/user-lock-guide.mdx
+++ b/docs/security/user-lock-guide.mdx
@@ -1,11 +1,11 @@
 ---
 title: Brute force attacks and locking user accounts
-description: User information is aprime target for malicious activity. Clerk protects your users against brute force attacks by locking out accounts with too many sign in attempts until a set period of time has passed.
+description: User information is aprime target for malicious activity. Clerk protects your users against brute force attacks by locking out accounts with too many sign-in attempts until a set period of time has passed.
 ---
 
 # Brute force attacks and locking user accounts
 
-User accounts are a vector for malicious attacks for many reasons, from impersonation to collecting personally identifiable information (PII). One method is a "brute force" attack, where a script will attempt many different passwords to sign into an account. One line of defense against these attacks is to temporarily deny attempts to sign into accounts that attempt too many failed sign ins in a short period of time. Locking out sign in attempts disrupts the attack and makes the account a less attractive target.
+User accounts are a vector for malicious attacks for many reasons, from impersonation to collecting personally identifiable information (PII). One method is a "brute force" attack, where a script will attempt many different passwords to sign into an account. One line of defense against these attacks is to temporarily deny attempts to sign into accounts that attempt too many failed sign-ins in a short period of time. Locking out sign-in attempts disrupts the attack and makes the account a less attractive target.
 
 ## How Clerk protects against brute force attacks
 
@@ -19,9 +19,9 @@ An admin can [unlock a user before the expiry of the lockout period via the Cler
 
 ### Defaults
 
-By default, Clerk applications will lock user accounts after 100 failed sign in attempts and require a one hour cool down period before anyone can attempt to sign into that account again. (While 100 attempts may seem like a lot to a human, it is very easy to reach this maximum for a bot!)
+By default, Clerk applications will lock user accounts after 100 failed sign-in attempts and require a one hour cool down period before anyone can attempt to sign into that account again. (While 100 attempts may seem like a lot to a human, it is very easy to reach this maximum for a bot!)
 
-You can [customize the number of times a sign in can be attempted before the account is locked, and how long lockouts last.](/docs/security/customize-user-lockout)
+You can [customize the number of times a sign-in can be attempted before the account is locked, and how long lockouts last.](/docs/security/customize-user-lockout)
 
 #### Actions
 Clerk measures the following actions as part of Account Lockout:
@@ -33,13 +33,13 @@ Clerk measures the following actions as part of Account Lockout:
 
 ## What a locked out user sees
 
-When a user exceeds the maximum sign in attempts, the Clerk [`<SignIn />`](/docs/components/authentication/sign-in) component will inform them of how long they have been locked out for and to contact support for more information.
+When a user exceeds the maximum sign-in attempts, the Clerk [`<SignIn />`](/docs/components/authentication/sign-in) component will inform them of how long they have been locked out for and to contact support for more information.
 
 <Images
 width={1512}
 height={914}
 src="/docs/images/security/userlock_login.png"
-alt="The Clerk component sign in form with a red alert stating 'Your account is locked. You will be able to try again in 59 minutes. For more information, please contact support.'"
+alt="The Clerk component sign-in form with a red alert stating 'Your account is locked. You will be able to try again in 59 minutes. For more information, please contact support.'"
 />
 
 <Callout type="info">
