--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -1,74 +1,54 @@
 ---
 title: Multi-session applications
-description: Learn how to configure and work with multi-session applications
+description: Learn how to use the Clerk API to add multi-session handling to your application.
 ---
 
 # Multi-session applications
 
-One of the most powerful features that Clerk provides out of the box is multi-session applications.
+<Callout type="danger">
+  This guide is for users who want to build a *custom* user interface using the Clerk API. To implement multi-session handling with a *prebuilt* UI, you should use Clerk's [`<UserButton />`](/docs/components/user/user-button) component.
+</Callout>
 
 A multi-session application is an application that allows multiple accounts to be signed in from the same browser at the same time. The user can switch from one account to another seamlessly. Each account is independent from the rest and has access to different resources.
+
+This guide provides you with the necessary information to build a custom multi-session flow using Clerk's API.
+
+To implement the multi-session feature to your application, you need to handle the following scenarios:
+
+- [Switching between different accounts](#switch-between-sessions)
+- [Adding new accounts](#add-a-new-session)
+- [Signing out from one account, while remaining signed in to the rest](#sign-out-active-session)
+- [Signing out from all accounts](#sign-out-all-sessions)
 
 ## Enable multi-session in your application
 
 To enable multi-session in your application, you need to configure it in the Clerk Dashboard.
 
-- Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions)
-- Select your application, then select **Sessions** in the navigation sidebar.
-- Toggle on **Multi-session handling**.
-- Select **Save changes**.
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions)
+2. Select your application, then select **Sessions** in the navigation sidebar.
+3. Toggle on **Multi-session handling**.
+4. Select **Save changes**.
 
-## Add multi-session support to your application
-
-There are two main ways to add the multi-session feature to your application:
-- [Use Clerk components](#use-clerk-components) if you want to use Clerk's pre-built UI
-- [Build a *custom flow*](#build-a-custom-flow) if you want to rebuild the existing Clerk flow using the Clerk API.
-
-### Use Clerk components
-
-The easiest way to add the multi-session feature to your application is by using Clerk's [`<UserButton />`](/docs/components/user/user-button) component.
-
-The following image demonstrates the `<UserButton />` component with two accounts signed in. The user can switch between the two accounts, add a new account, or sign out from one or all accounts.
-
-<Images
-  width={440}
-  height={479}
-  src="/docs/images/custom-flows/user-button-multisession.jpg"
-  alt="The User Button component with multiple accounts signed in."
-/>
-
-To learn how to use the `<UserButton />` component in your application, check out the [reference documentation](/docs/components/user/user-button).
-
-### Build a custom flow
-
-If the `UserButton />` component doesn't cover your needs, you can build a custom multi-session flow using Clerk's API.
-
-To enable a multi-session instance, you need to handle the following scenarios:
-
-- Switching between different accounts
-- Adding new accounts
-- Signing out from one account, while remaining signed in to the rest
-
-### Get the active session and user
+## Get the active session and user
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
-// Getting the active session and user
-const { session: activeSession, user: activeUser } = useClerk();
+// Retrieve the active session and user
+const { session, user } = useClerk();
 ```
 
 ```js
-// Getting the active session
+// Retrieve the active session
 const activeSession = window.Clerk.session;
 
-// Getting the active user
+// Retrieve the active user
 const activeUser = window.Clerk.user;
 ```
 </CodeBlockTabs>
 
-### Switch between sessions
+## Switch between sessions
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
@@ -92,7 +72,7 @@ window.Clerk.setActive({ session: availableSessions[0].id });
 ```
 </CodeBlockTabs>
 
-### Add a new session
+## Add a new session
 
 To add a new session, simply link to your existing sign-in flow. New sign-ins will automatically add to the list of available sessions on the client. To create a sign-in flow, please check one of the following popular guides:
 
@@ -102,35 +82,15 @@ To add a new session, simply link to your existing sign-in flow. New sign-ins wi
 
 For more information on how Clerk's sign-in flow works, check out the [detailed sign-in guide](/docs/custom-flows/overview#sign-in-flow).
 
-### Sign out active session
+## Sign out all sessions
 
-This version of sign out will deactivate the active session. The rest of the available sessions will remain intact.
-
-<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
-```jsx
-import { useClerk } from "@clerk/clerk-react";
-
-const { signOutOne } = useClerk();
-
-// Use signOutOne to sign-out only from the active session.
-await signOutOne();
-```
-
-```js
-// Use signOutOne to sign-out only from the active session.
-await window.Clerk.signOutOne();
-```
-</CodeBlockTabs>
-
-### Sign out all sessions
-
-This request will deactivate all sessions on the current client.
+Use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) method to deactivate all sessions on the current client.
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
-const { signOut } = useClerk();
+const { signOut, session } = useClerk();
 
 // Use signOut to sign-out all active sessions.
 await signOut();
@@ -139,5 +99,29 @@ await signOut();
 ```js
 // Use signOut to sign-out all active sessions.
 await window.Clerk.signOut();
+```
+</CodeBlockTabs>
+
+## Sign out active session
+
+Use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) method to deactivate a specific session by passing the session ID.
+
+<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
+```jsx
+import { useClerk } from "@clerk/clerk-react";
+
+// Retrieve the signOut method and the active session
+const { signOut, session } = useClerk();
+
+// Use signOut to sign-out the active session
+await signOut(session.id);
+```
+
+```js
+// Retrieve the active session
+const activeSession = window.Clerk.session;
+
+// Use signOut to sign-out the active session
+await window.Clerk.signOut(activeSession.id);
 ```
 </CodeBlockTabs>
