--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -52,7 +52,7 @@ For [Clerk Components](/docs/components/overview), this is handled automatically
 
 ## Get an OAuth access token for a social login provider
 
-To query an OAuth progvider for additional data of your users, you can use the OAuth access token.
+You can use a provider's OAuth access token to access user data from that provider in addition to their data from Clerk.
 
 To retrieve the OAuth access token for a user, use the `getUserOauthAccessToken()` method from the Clerk Backend SDK. Note that this method must be used in a server environment, and cannot be run on the client.
 
