apply code review suggestions

--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -5,9 +5,7 @@ description: Learn how to effortlessly add social connections to your applicatio
 
 # Social connections (OAuth)
 
-Clerk makes it easy to add social connection capabilities to your application. Social connections are designed to simplify the sign-up and sign-in process for the end-user, resulting in higher conversion rates, a streamlined user data collection flow, and an overall better user experience.
-
-Social connections provide better security than passwords and other long-lived knowledge-based secrets. With social connections, users gain frictionless access to your application by using their existing credentials from an OAuth provider (Google, Facebook, X/Twitter, etc.) without having to go through complicated registration flows.
+Clerk makes it easy to add social connection capabilities to your application. With social connections, users gain frictionless access to your application by using their existing credentials from an OAuth provider (Google, Facebook, X/Twitter, etc.) without having to go through complicated registration flows. Social connections are designed to simplify the sign-up and sign-in process for the end-user, resulting in higher conversion rates, a streamlined user data collection flow, and an overall better user experience.
 
 <Callout type="info">
   When using social connections, the sign-up and sign-in flows are equivalent. If a user doesn't have an account and tries to sign in, an account will be made for them, and vice versa.
@@ -54,7 +52,7 @@ For [Clerk Components](/docs/components/overview), this is handled automatically
 
 You can use a provider's OAuth access token to access user data from that provider in addition to their data from Clerk.
 
-To retrieve the OAuth access token for a user, use the `getUserOauthAccessToken()` method from the Clerk Backend SDK. Note that this method must be used in a server environment, and cannot be run on the client.
+To retrieve the OAuth access token for a user, use the [`getUserOauthAccessToken()`](/docs/references/backend/user/get-user-oauth-access-token) method from the Clerk Backend SDK. Note that this method must be used in a server environment, and cannot be run on the client.
 
 Clerk ensures that the OAuth Access Token will be always fresh so that you don't have to worry about OAuth Refresh Tokens anymore.
 
