--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -56,6 +56,54 @@ To retrieve the OAuth access token for a user, use the [`getUserOauthAccessToken
 
 Clerk ensures that the OAuth Access Token will be always fresh so that you don't have to worry about OAuth Refresh Tokens anymore.
 
+The following example demonstrates how to retrieve the OAuth access token for a user and use it to fetch user data from the Notion API. It assumes:
+
+- You have already [enabled the Notion OAuth connection in the Clerk Dashboard](/docs/authentication/social-connections/notion).
+- The user has already connected their Notion account to your application.
+- The user has the correct permissions to access the Notion API.
+
+This example is written for Next.js App Router, but is supported by any React meta framework, such as Remix or Gatsby.
+
+```tsx filename="app/api/notion/route.tsx"
+import { auth, clerkClient } from "@clerk/nextjs";
+import { NextResponse } from "next/server";
+
+export async function GET() {
+  const { userId } = auth();
+
+  if (!userId) {
+    return NextResponse.json({ message: "User not found" });
+  }
+
+  // Get the OAuth access token for the user
+  const provider = "oauth_notion";
+
+  const clerkResponse = await clerkClient.users.getUserOauthAccessToken(
+    userId,
+    provider
+  );
+
+  const accessToken = clerkResponse[0].token;
+
+  // Fetch the user data from the Notion API
+  // This endpoint fetches a list of users
+  // https://developers.notion.com/reference/get-users
+  const notionUrl = "https://api.notion.com/v1/users";
+
+  const notionResponse = await fetch(notionUrl, {
+    headers: {
+      Authorization: `Bearer ${accessToken}`,
+      "Notion-Version": "2022-06-28",
+    },
+  });
+
+  // Handle the response from the Notion API
+  const notionData = await notionResponse.json();
+
+  return NextResponse.json({ message: notionData });
+}
+```
+
 ## Add social connection after sign-up
 
 For each OAuth provider, you can choose whether it will be available during sign-up and sign-in, or if the connection should be made later.
