--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -20,7 +20,7 @@ This guide includes examples for both use cases. You can select one of the follo
 
 For the sake of this guide, examples are written for Next.js App Router, but they are supported by any React meta framework, such as Remix or Gatsby.
 
-## Add a custom page to the `<OrganizationProfile />` component
+## Add a custom page to `<OrganizationProfile />`
 
 Custom pages can be rendered inside the `<OrganizationProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
 
