--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -154,7 +154,7 @@ The following example demonstrates two ways that you can render content in the `
 </CodeBlockTabs>
 
 
-## Add a custom link to the `<OrganizationProfile />` component
+## Add a custom link to `<OrganizationProfile />`
 
 You can add external links to the `<OrganizationProfile />` navigation sidebar using the `<OrganizationSwitcher.OrganizationProfileLink />` component or the `<OrganizationProfile.Link />` component, depending on your use case.
 
