--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -237,7 +237,7 @@ The following example adds a link to the homepage in the navigation sidebar of t
 </CodeBlockTabs>
 
 
-### Reordering default routes
+## Reordering default routes
 
 If you want to reorder the default routes, `Members` and `Settings`, set the `label` prop to `'members'` or `'settings'`. This will target the existing default page and allow you to rearrange it.
 
